--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "frontend"]
 	path = frontend
-	url = https://github.com/gchq/CyberChef.git
+	url = https://github.com/Snider/CyberChef.git
